# ckswhkd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
contrib/: PKGBUILD
contrib/init/systemd/: README.md  hotkeys.service  hotkeys.sh
docs/: ckswhkd-keys.5.scd  ckswhkd.1.scd  ckswhkd.5.scd  ckswhks.1.scd  swhkd.1.scd  swhkd.5.scd
scripts/: build-polkit-policy.sh
sweet/: Cargo.toml  template.pest
sweet/src/: bindings.rs  lib.rs
swhkd/: Cargo.toml
swhkd/src/: config.rs  daemon.rs  environ.rs  uinput.rs
swhks/: Cargo.toml
swhks/src/: ipc.rs  main.rs
