[package]
description = "Server for ckswhkd to run shell commands at invoking user level."
edition = "2021"
license = "BSD-2-Clause"
name = "ckswhks"
version = "1.3.1-dev"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>\n",
	"Angelo Fallaria <ba.fallaria@gmail.com>\n",
	"EdenQwQ <lsahlm1eden@gmail.com>\n",
]

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
nix = "0.23.1"
sysinfo = "0.23.5"
clap = { version = "4.1.0", features = ["derive"] }

[[bin]]
name = "ckswhks"
path = "src/main.rs"
